WebKit/gtk/webkit/webkitdownload.cpp
@@ -698,6 +698,9 @@ gdouble webkit_download_get_progress(WebKitDownload* download)
     g_return_val_if_fail(WEBKIT_IS_DOWNLOAD(download), 1.0);
 
     WebKitDownloadPrivate* priv = download->priv;
+    if (!priv->networkResponse)
+        return 0;
+
     gdouble total_size = (gdouble)priv->networkResponse->expectedContentLength();
 
     if (total_size == 0)
@@ -723,6 +726,9 @@ gdouble webkit_download_get_elapsed_time(WebKitDownload* download)
     g_return_val_if_fail(WEBKIT_IS_DOWNLOAD(download), 0.0);
 
     WebKitDownloadPrivate* priv = download->priv;
+    if (!priv->timer)
+        return 0;
+
     return g_timer_elapsed(priv->timer, NULL);
 }
 
